main/default/objects/Communication__c/fields/Capture_ID__c.field-meta.xml
<CustomField>
    <fullName>Capture_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capture ID</label>
    <referenceTo>Compass_Capture__c</referenceTo>
    <relationshipLabel>Communications</relationshipLabel>
    <relationshipName>Communications</relationshipName>
    <type>Lookup</type>
</CustomField>