main/default/objects/Communication__c/fields/Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Date__c</fullName>
    <label>Email Date</label>
    <type>Date</type>
</CustomField>