main/default/objects/Communication__c/fields/Email_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_Date_and_Time__c</fullName>
    <label>Email Date and Time</label>
    <type>DateTime</type>
</CustomField>