main/default/objects/Communication__c/fields/Email_Delivery_Date_Time_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Email_Delivery_Date_Time_Schedule__c</fullName>
    <description>Determines when the email communication will be sent</description>
    <label>Email Delivery Date/Time Schedule</label>
    <type>DateTime</type>
</CustomField>