main/default/objects/Communication__c/fields/Email_Recipient_BCC__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipient_BCC__c</fullName>
    <inlineHelpText>Separate each email address with a comma</inlineHelpText>
    <label>Email Recipient BCC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>