main/default/objects/Communication__c/fields/Email_Template_Link__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp;  Email_Template_Id__c</formula>
    <label>Email Template Link</label>
    <type>Text</type>
</CustomField>