main/default/objects/Communication__c/fields/Email_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_Time__c</fullName>
    <label>Email Time</label>
    <type>Time</type>
</CustomField>