main/default/objects/Communication__c/fields/Excluded_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Recipients__c</fullName>
    <label>Excluded Recipients</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>