main/default/objects/Communication__c/fields/Gov_Cloud_Id__c.field-meta.xml
<CustomField>
    <fullName>Gov_Cloud_Id__c</fullName>
    <label>Gov Cloud Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>