main/default/objects/Communication__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Milestone</description>
    <label>Milestone</label>
    <type>Checkbox</type>
</CustomField>