main/default/objects/Communication__c/fields/Organization_Wide_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Wide_Email_Id__c</fullName>
    <label>Organization Wide Email Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>