main/default/objects/Communication__c/fields/Reply_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Reply_Email_Address__c</fullName>
    <label>Reply Email Address</label>
    <type>Email</type>
</CustomField>