main/default/objects/Communication__c/fields/Sender_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email_Address__c</fullName>
    <label>Sender Email Address</label>
    <type>Email</type>
</CustomField>