main/default/objects/Communication__c/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <label>Sender Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>