main/default/objects/Communication__c/fields/Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Status_Detail__c</fullName>
    <inlineHelpText>Status of each chunk of communication. Note: Near real-time sending of communication is in chunk. Number of recipients per chunk is defined in the Communication Batch Size custom label.</inlineHelpText>
    <label>Status Detail</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>