main/default/objects/Communication__c/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <description>Returns the correct survey URL for standalone and event surveys</description>
    <formula>IF (
 ISBLANK( Survey__r.Event__c ),
 Survey__r.Standalone_Survey_URL__c,
 SUBSTITUTE( Survey__r.Event__r.Event_Page_URL__c , &apos;/s/events&apos;, &apos;/s/survey&apos;)   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey URL</label>
    <type>Text</type>
</CustomField>