main/default/objects/Communication__c/listViews/All_Communications.listView-meta.xml
<ListView>
    <fullName>All_Communications</fullName>
    <columns>NAME</columns>
    <columns>Body__c</columns>
    <columns>Campaign__c</columns>
    <columns>Survey__c</columns>
    <columns>Journey__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>